--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap next-sitemap.config.js"
   },
   "dependencies": {
     "express": "^4.18.1",
     "next": "12.2.3",
+    "next-sitemap": "^3.1.15",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
