--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "sass": "^1.54.0"
+    "sass": "^1.54.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.20.0",
